--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,10 @@
     <script type="module" src="/src/main.js" defer></script>
   </head>
   <body>
-    <div id="app">
-      <div>Hello this is the default app</div>
-      <p>this is the test branch</p>
-    </div>
+
+
+    <!-- Canvas is like the blank slate -->
+    <canvas id="bg"></canvas>
     
   </body>
 </html>
