stars and image background

--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>client</title>
     <script type="module" src="/src/main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+  <!-- Canvas is like the blank slate -->
+    
 
 
-    <!-- Canvas is like the blank slate -->
     <canvas id="bg"></canvas>
+    <main>
+      <div class="text-container bg-amber-500">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea vitae deleniti, nemo, dolor tempore magnam sed laudantium quibusdam officiis, assumenda facere non illo perferendis quia voluptatem corrupti veritatis est eaque.</p>
+      </div>
+    </main>
     
   </body>
 </html>
