--- a/client/index.html
+++ b/client/index.html
@@ -14,10 +14,33 @@
 
 
     <canvas id="bg"></canvas>
-    <main>
-      <div class="text-container bg-amber-500">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea vitae deleniti, nemo, dolor tempore magnam sed laudantium quibusdam officiis, assumenda facere non illo perferendis quia voluptatem corrupti veritatis est eaque.</p>
-      </div>
+    <main class="presentation">
+      <section class="p-5 bg-amber-500 bg-opacity-20 slide">
+        <h1>Three.js Presentation</h1>
+        <p>So what is Three.js?</p> 
+        <p>Three.js is the worlds most popular JavaSrcript framework for displaying 3D content on the web.</p>
+        <p>In our demo we will showcase</p>
+        <ul>
+          <li>How to install Three.js( and how easy it is to do so! )</li>
+          <li>The main components that make up a project in Three.js</li>
+          <li>The use cases for Three.js in production</li>
+        </ul>
+    </section>
+    <section class="p-5 bg-white bg-opacity-10 slide">
+      <h2>How to Install Three.js</h2>
+      <p>The installation of Three.js is really quite simple.</p>
+      <p>We started by creating a project with Vite. We are using Vite because</p>
+      <ul>
+        <li>
+          Vite's hot reload allows us to instantly see the changes made to our scene</li>
+        <li>Three.js uses ES modules. Vite supports ES modules natively,<br/> so imports like import * as THREE from 'three' works perfectly out the box</li>
+      </ul>
+      <br/>
+      <h3>In simple terms:</h3>
+      <p>Three.js makes the 3D world.</p>
+      <p>Vite makes your development fast and smooth</p>
+  </section>
+
     </main>
     
   </body>
