cleaning up code

--- a/client/index.html
+++ b/client/index.html
@@ -10,11 +10,8 @@
   </head>
   <body>
   <!-- Canvas is like the blank slate -->
-    
-
-
     <canvas id="bg"></canvas>
-    <main class="presentation">
+    <!-- <main class="presentation">
       <section class="p-5 bg-amber-500 bg-opacity-20 slide">
         <h1>Three.js Presentation</h1>
         <p>So what is Three.js?</p> 
@@ -41,7 +38,7 @@
       <p>Vite makes your development fast and smooth</p>
   </section>
 
-    </main>
+  </main> -->
     
   </body>
 </html>
